# testrunner-lite

./: .gitignore  COPYING  Makefile.am  OBSOLETE  _src  configure.ac  testrunner-lite.changes  testrunner-lite.spec
debian/: changelog  control  copyright  rules  testrunner-lite-doc.install  testrunner-lite-hwinfo-maemo.install  testrunner-lite-hwinfo-maemo.postinst  testrunner-lite-hwinfo-maemo.prerm  testrunner-lite-hwinfo-meego.install  testrunner-lite-hwinfo-meego.postinst  testrunner-lite-regression-tests.install  testrunner-lite-tests.dirs  testrunner-lite-tests.install  testrunner-lite.install
doc/: Doxyfile  Makefile.am  mainpage.dox  testrunner-lite.man
rpm/: testrunner-lite.changes  testrunner-lite.spec
src/: Makefile.am  event.c  event.h  executor.c  executor.h  hwinfo.c  hwinfo.h  hwinfo_maemo.c  hwinfo_meego.c  hwinfo_nemo.c  hwinfo_sailfish.c  log.c  log.h  main.c  manual_executor.c  manual_executor.h  remote_executor.c  remote_executor.h  remote_executor_libssh2.c  remote_executor_libssh2.h  run_tests.sh  testdefinitiondatatypes.c  testdefinitiondatatypes.h  testdefinitionparser.c  testdefinitionparser.h  testdefinitionprocessor.c  testdefinitionprocessor.h  testfilters.c  testfilters.h  testmeasurement.c  testmeasurement.h  testresultlogger.c  testresultlogger.h  testrunnerlite.h  utils.c  utils.h
testdata/: Makefile.am  bad.xml  entity_substitution.xml  invalid.xml  measurement.txt  resumetest.xml  sample_automatic_tests.xml  sample_input_file.xml  sample_schema_validation.xml  series.txt  simple.xml  testrunner-tests-bg.xml  testrunner-tests-environment.xml  testrunner-tests-get.xml  testrunner-tests-manual-emptysteps.xml  testrunner-tests-manual-nosteps.xml  testrunner-tests-manual-set.xml  testrunner-tests-measurement.xml  testrunner-tests-non-utf8.xml  testrunner-tests-plan_with_all_attributes.xml  testrunner-tests-pre_step-fail.xml  testrunner-tests-semantic_invalid.xml  testrunner-tests-semi_auto.xml  testrunner-tests-syntax_valid.xml  testrunner-tests-syntax_valid_2.xml  testrunner-tests-utf8.xml  testrunner-tests-utf8.xml.in  unicode.txt  usbnetworking-tests-syntax_valid.xml  utf.xml
testdata/.svn/: all-wcprops  entries
testdata/.svn/text-base/: bad_output.xml.svn-base  filter_tests.xml.svn-base  tests.xml.svn-base
tests/: Makefile.am  main.c  testdefinition.xsd  testrunnerlitetestscommon.h  tests.xml  ut_argumentparser.c  ut_features.c  ut_filters.c  ut_manual_executor.c  ut_testdefinitionparser.c  ut_testexecutor.c  ut_testresultlogger.c
tests/regression/: Makefile.am  regtester.sh  tests.xml  tests.xml.in
tests/regression/testdata/: trlitereg01.xml  trlitereg02.xml  trlitereg03.xml  trlitereg05.xml  trlitereg06.xml  trlitereg07.xml  trlitereg08.xml  trlitereg09.xml  trlitereg10.xml  trlitereg11.xml  trlitereg12.xml  trlitereg13.xml  trlitereg14.xml  trlitereg15.xml  trlitereg16.xml  trlitereg17.xml  trlitereg18.xml  trlitereg19.xml
tests/regression/trlitereg-xml/: trlitereg02.xml  trlitereg04.xml
tests/scripts/: long_output.sh  terminating_process.sh  unterminating_process.sh
tests/unit/: Makefile.am  main.c  testrunnerlitetestscommon.h  tests.xml  tests.xml.in  ut_argumentparser.c  ut_features.c  ut_filters.c  ut_manual_executor.c  ut_testdefinitionparser.c  ut_testexecutor.c  ut_testresultlogger.c
tests/utils/: Makefile.am  terminating.c  trlite-test-daemon.c  unterminating.c
