testrunnerlitetestdatadir = /usr/share/testrunner-lite-tests/testdata/
testrunnerlitetestdata_DATA = *.xml unicode.txt UTF-8-demo.txt

testrunnerliteregressiontestdatadir = /usr/share/testrunner-lite-regression-tests/testdata/
testrunnerliteregressiontestdata_DATA = *.xml unicode.txt measurement.txt series.txt
